# surv

./: .gitignore  README.md  pyproject.toml
surv/: __init__.py  cli.py  settings.py
surv/algo/: constraints.py  evaluator.py  id3.py  node.py  result.py
surv/dataset/: dataset.py  feature.py  feature_info.py
surv/models/: dataset.py  dataset_metadata.py  feature.py  feature_attributes.py  feature_info.py  feature_metadata.py  feature_purpose.py  feature_types.py  question.py  response_type.py
tests/: test_version.py
tests/algo/: conftest.py  test_evaluator.py  test_id3.py
tests/algo/data/: questions.json  responses-test.csv  responses-train.csv
tests/algo/data/house/: features.json  metadata.json  tabular-test.csv  tabular-train.csv  tabular.csv
tests/algo/data/latitude/: features.json  metadata.json  tabular.csv  tags.json
